[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Player/Player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/GameObjects/Player.gd" type="Script" id=2]
[ext_resource path="res://Shaders/Vingette/RegularVignette.tres" type="Material" id=3]
[ext_resource path="res://Sprites/Particle.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 7.9 )

[sub_resource type="ImageTexture" id=3]
size = Vector2( 800, 800 )

[sub_resource type="Animation" id=7]
resource_name = "Absorb"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AbsorbPartilces:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "die"

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0.564773 ), 0.0, 1.38597, 0, 0, Vector2( 1, 0 ), -4.0049, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.11
emission_shape = 5
emission_ring_radius = 37.54
emission_ring_inner_radius = 17.59
emission_ring_height = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 205.39
orbit_velocity = 0.2
orbit_velocity_random = 0.83
radial_accel = -65.5
tangential_accel = 15.42
scale = 0.0
scale_random = 1.0
scale_curve = SubResource( 12 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
jump_speed = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"

[node name="StuckRay1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 9

[node name="StuckRay2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -6 )
collision_mask = 9

[node name="StuckRay3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 4, 0 )
collision_mask = 9

[node name="StuckRay4" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -4, 0 )
collision_mask = 9

[node name="Vignette" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( -1, -1 )
z_index = 10
texture = SubResource( 3 )

[node name="DeathParticleAnimation" type="AnimationPlayer" parent="."]
anims/Absorb = SubResource( 7 )
anims/die = SubResource( 8 )

[node name="AbsorbPartilces" type="Particles2D" parent="."]
modulate = Color( 0.372549, 0.372549, 0.372549, 1 )
material = SubResource( 10 )
emitting = false
amount = 145
speed_scale = 2.04
visibility_rect = Rect2( -37.4398, -37.413, 74.8736, 74.8219 )
process_material = SubResource( 9 )
texture = ExtResource( 5 )
